# Atari-10K

./: .gitignore  README.md  pyproject.toml
atari10k/: load_env.py
example/: load_txt_manual_with_captions.py
example/manuals/Alien/: figure_captions.json
example/manuals/Breakout/: Breakout.txt
example/manuals/Frostbite/: Frostbite.txt
example/manuals/MarioBros/: figure_captions.json
example/manuals/MsPacman/: MsPacman.txt  figure_captions.json
manuals/Alien/: Alien.txt  figure_captions.json
manuals/Breakout/: figure_captions.json
manuals/Frostbite/: figure_captions.json
manuals/MarioBros/: MarioBros.txt  figure_captions.json
manuals/MsPacman/: figure_captions.json
manuals/text/: Alien.txt  Breakout.txt  Frostbite.txt  Mariobros.txt  MsPacman.txt
