[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "example"
version = 1.0
description = "Atari 10k dataset"

[options]
packages = find:

[tool.poetry.dependencies]
python = "^3.8"
pymupdf = "^1.23.5"

[tool.poetry.files]
include = ["*.py", "README.md", "LICENSE", "manuals/*"]