[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example"
version = "0.0.1"
description = "A package holding the Atari 10k dataset and a few useful functions for working with it."
authors = [
  { name = "Leon Guertler", email = "" },
  { name = "Dylan Hillier", email = "" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/LeonGuertler/Atari-10K"